--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
   @layer components{
     #todoList{
-      @apply w-[380px] flex  flex-col gap-4
+      @apply sm:w-[380px] w-[280px] flex  flex-col gap-4
     }
     #todoList li{
       @apply items-start text-2xl rounded text-white flex justify-between font-bold  py-1 bg-slate-500 
